--- a/src/VNEDC/mes/templates/mes/fast_check2.html
+++ b/src/VNEDC/mes/templates/mes/fast_check2.html
@@ -597,7 +597,7 @@ Report Check
                                                                                                                     {% if forloop.counter0|divisibleby:2 %}
                                                                                                                         <tr>
                                                                                                                     {% endif %}
-                                                                                                                        <td style="border: 0.5px solid white;background-color: black; width: 40px">&nbsp;{{ value }}&nbsp;</td>
+                                                                                                                        <td style="border: 0.5px solid white;background-color: black; width: 40px; text-align: left">&nbsp;{{ value }}&nbsp;</td>
                                                                                                                     {% if forloop.counter0|divisibleby:2 == False %}
                                                                                                                         </tr>
                                                                                                                     {% endif %}
