--- a/src/VNEDC/mes/templates/mes/base.html
+++ b/src/VNEDC/mes/templates/mes/base.html
@@ -37,6 +37,9 @@
     <a href="{% url 'machine_status' %}" class="btn btn-warning btn">
         <i class="fas fa-wrench"></i> Machine logs
     </a>
+    <a href="{% url 'spiderweb' %}" class="btn btn-warning btn">
+        <i class="fas fa-wrench"></i> Spider
+    </a>
 </div>
 <div>
 {% block content %}
