--- a/src/VNEDC/mes/templates/mes/fast_check2.html
+++ b/src/VNEDC/mes/templates/mes/fast_check2.html
@@ -633,4 +633,9 @@ Report Check
         </div>
     </div>
 </div>
+<script>
+    setTimeout(function(){
+       location.reload();
+    }, 180000);  // 3 minutes in milliseconds
+</script>
 {% endblock content %}
