--- a/src/VNEDC/mes/templates/mes/index.html
+++ b/src/VNEDC/mes/templates/mes/index.html
@@ -1,13 +1,14 @@
-{% extends 'bases/base.html' %}
+{% extends 'mes/base.html' %}
 {% load crispy_forms_tags %}
 {% load static %}
+{% block css %}
 {% load i18n %}
+{% endblock css %}
+
 {% block head %}
 
 {% endblock %}
-{% block title %}
-MES Tool
-{% endblock title %}
+
 {% block breadcrumb %}
 
 {% endblock %}
@@ -20,7 +21,6 @@ MES Tool
 
 {% endblock ready %}
 
-{% block container %}
 
 
-{% endblock %}
+
