--- a/src/VNEDC/mes/templates/mes/runcard.html
+++ b/src/VNEDC/mes/templates/mes/runcard.html
@@ -52,15 +52,16 @@
     .popup {
         display: none;
         position: absolute;
-        top: -25px; /* Position above the MachineName */
+        top: 100%; /* Position above the MachineName */
         left: 0;
         background-color: #333;
         color: #fff;
         padding: 5px;
         border-radius: 5px;
-        font-size: 12px;
+        font-size: 0.9rem;
         white-space: nowrap;
         z-index: 10;
+        margin-top: 5px;
     }
 
 </style>
