--- a/src/VNEDC/mes/templates/mes/fast_check.html
+++ b/src/VNEDC/mes/templates/mes/fast_check.html
@@ -383,4 +383,9 @@ Report Check
         </div>
     </div>
 </div>
+<script>
+    setTimeout(function(){
+       location.reload();
+    }, 180000);  // 3 minutes in milliseconds
+</script>
 {% endblock content %}
